[package]
name = "traffic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libbpf-rs = { workspace = true }
libc = { workspace = true }
# plain = "0.2"
clap = { workspace = true }
socket2 = { workspace = true }
nix = { workspace = true, features = ["time"] }
ctrlc = { workspace = true }
# mortise-manager = { path = "../mortise-manager" }
mortise-common = { path = "../mortise-common" }
tokio = { workspace = true, features = ["process"] }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
csv = "1.2.1"
serde = { workspace = true }
serde_json = { workspace = true }
speedy = { workspace = true }
num_cpus = "1.15.0"
netem-trace = { version = "0.2.0", features = ["mahimahi", "serde", "human"] }
bandwidth = "0.3.0"
tokio-timerfd = "0.2.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1.72"
rustc-hash = { workspace = true }
tokio-stream = "0.1.17"
http = "1.2.0"
httparse = "1.9.5"
httpdate = "1.0.3"
bytesize = { version = "1.3.0", features = ["serde"] }

[build-dependencies]
libbpf-cargo = { workspace = true }